# aidi-1100

./: pyproject.toml  requirements.txt  xgb_model.joblib
Assignments/Project/: BClassify.py
app/: project.py
