[project]
name = "AIDIProject"
version = "0.1.0"
description = "AIDI Project"
readme = "README.md"
dependencies = [
    "statsmodels",
    "scikit-learn~=1.3.0",
    "xgboost~=1.7.6",
    "catboost~=1.2",
    "matplotlib",
    "pytest",
    "numpy",
    "fastapi",
    "uvicorn",
    "requests",
    "seaborn",
    "plotly",
    "nbformat>=4.2.0",
    "pygments",

]
